test-pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-with-label
  labels:
    env: prod
spec:
  containers:
    - name: nginx
      image: nginx
