mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: dhanigas-ns
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:7-jammy
        command: ["/bin/sh"]
        args:
          - -c
          - |
            i=0;
            while true; do
              i=$((i+1));
              dd if=/dev/zero of=/data/db/file_$i bs=1M count=50;
              sleep 1;
           done 
        ports:
        - containerPort: 27017
        resources:
          limits:
            memory: "512Mi"
            cpu: "200m"
          requests:
            memory: "256Mi"
            cpu: "100m"
        volumeMounts: 
         - name: dhaniga-data
           mountpath: /data/db
      volumes:
       - name: dhaniga-data
         emptyDir: 
           sizeLimit: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
