constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-env-label
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
